--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "celebrate": "^15.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
